<resources>
    <string name="app_name">Movie List</string>
    <string name="tahun_terbit">Terbit</string>
    <string name="judul_film">Judul</string>
    <string name="genre_film">Genre</string>
    <string name="rating_film">Rating</string>
    <string name="cari">Cari</string>
    <string name="detail_title">Detail</string>
    <string name="director_text">Director</string>
    <string name="director">Director</string>
    <string name="desc_text">Description</string>
    <string name="desc">Description</string>
    <string name="main_menu">My Movie List</string>
    <string name="fav_menu">Favorite Movies</string>
    <string name="favorites">favorites</string>
    <string name="rating_text">Score: </string>
</resources>