<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:label="@null">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/material_dynamic_primary50"
                android:label="@null"/>
        </FrameLayout>


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_dynamic_primary50"
            android:label="@null"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar2"
                    android:layout_width="wrap_content"
                    android:label="@null"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_back" />

                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_title"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="20sp" />

            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topbar"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="19dp"
            android:gravity="top"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginBottom="6dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/poster_film" />

            <TextView
                android:id="@+id/textViewJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/judul_film"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/genre_film"
                    android:textSize="17dp" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/rating_text"
                    android:textSize="17sp" />

                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textViewRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/rating_film"
                    android:textSize="17sp" />


            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:text="@string/tahun_terbit"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewTahun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:text="@string/tahun_terbit"
                android:textSize="15sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:text="@string/director_text"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:text="@string/director"
                android:textSize="15sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:text="@string/desc_text"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:text="@string/desc"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_notfav"

        app:layout_anchorGravity="bottom|right|end"
        android:contentDescription="TODO" />

    </RelativeLayout>


